# simple_ddpm

./: .gitignore  README.md  pyproject.toml
src/simple_diffusion/: aa_vae.py  conv_vae.py  fully_connected_denoiser.py  fully_connected_vae.py  ldm_model.py  metrics.py  model.py  model_base.py  resnet_denoiser.py  schedules.py  train.py  unet.py  unet_vae.py  vdm_model.py
src/simple_diffusion/cifar/: plotting.py  train.py
src/simple_diffusion/fashion_mnist/: plotting.py  train.py  train_ldm.py
src/simple_diffusion/gaussian_1d/: plotting.py  train.py  train_ldm.py  train_vdm.py
src/simple_diffusion/gaussian_2d/: train.py  train_ldm.py  train_vdm.py
tests/: test_1dgaussian.py  test_2dgaussian.py  test_cifar.py  test_fashion_mnist.py  test_metrics.py  test_misc.py  test_model.py  test_unet.py
