[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "simple_diffusion"
requires-python = ">=3.11"
dependencies = [
    "requests",
    'importlib-metadata; python_version<"3.10"',
    "numpy",
    "pandas",
    "jupyter",
    "matplotlib",
    "torch",
    "lightning",
#    "neptune",
    "torchmetrics[image]",
    "tensorboard",
    "torch-ema",
    "einops"
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest",
    "hypothesis",
    "black",
    "isort"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

#[project.scripts]
#my-script = "my_package.module:function"

# ... other project metadata fields as listed in:
#     https://packaging.python.org/en/latest/guides/writing-pyproject-toml/